// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthForm components match snapshot with login form 1`] = `
<div>
  <form
    class="css-f2htex"
    id="login-form"
  >
    <div
      class="chakra-stack css-ylms7g"
    >
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <input
            class="chakra-input css-10kn41x"
            id="field-:r2:"
            placeholder="Email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <input
            class="chakra-input css-10kn41x"
            id="field-:r3:"
            name="password"
            placeholder="Password"
            type="password"
            value=""
          />
          <button
            aria-label="The eye icon"
            class="chakra-input__right-element css-1uzzgp1"
            data-testid="right-icon-input"
            type="button"
          >
            <svg
              class="chakra-icon css-1l546ul"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g
                fill="currentColor"
              >
                <path
                  d="M23.2,10.549a20.954,20.954,0,0,0-4.3-3.6l4-3.995a1,1,0,1,0-1.414-1.414l-.018.018a.737.737,0,0,1-.173.291l-19.5,19.5c-.008.007-.018.009-.026.017a1,1,0,0,0,1.631,1.088l4.146-4.146a11.26,11.26,0,0,0,4.31.939h.3c4.256,0,8.489-2.984,11.051-5.8A2.171,2.171,0,0,0,23.2,10.549ZM16.313,13.27a4.581,4.581,0,0,1-3,3.028,4.3,4.3,0,0,1-3.1-.19.253.253,0,0,1-.068-.407l5.56-5.559a.252.252,0,0,1,.407.067A4.3,4.3,0,0,1,16.313,13.27Z"
                />
                <path
                  d="M7.615,13.4a.244.244,0,0,0,.061-.24A4.315,4.315,0,0,1,7.5,12,4.5,4.5,0,0,1,12,7.5a4.276,4.276,0,0,1,1.16.173.244.244,0,0,0,.24-.062l1.941-1.942a.254.254,0,0,0-.1-.421A10.413,10.413,0,0,0,12,4.75C7.7,4.692,3.4,7.7.813,10.549a2.15,2.15,0,0,0-.007,2.9,21.209,21.209,0,0,0,3.438,3.03.256.256,0,0,0,.326-.029Z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
      <div
        class="chakra-stack css-qo2j2d"
      >
        <label
          class="chakra-checkbox css-1elxtiq"
        >
          <input
            aria-disabled="false"
            aria-label="remember"
            class="chakra-checkbox__input"
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="chakra-checkbox__control css-dnty2r"
          />
          <span
            class="chakra-checkbox__label css-1oeb2oe"
          >
            <p
              class="chakra-text css-10ircq3"
            >
              Remember me
            </p>
          </span>
        </label>
        <a
          aria-label="forgot password"
          class="chakra-button css-1pkuff9"
          href="/forgot-password"
        >
          forgot password?
        </a>
      </div>
    </div>
    <div
      class="css-omcqsq"
    >
      <p
        class="chakra-text css-dz8804"
      />
      <button
        aria-label="Sign In"
        class="chakra-button css-4io6p0"
        disabled=""
        form="login-form"
        role="button"
        type="submit"
      >
        Sign In
      </button>
    </div>
    <div
      class="css-1l4w6pd"
    >
      <p
        class="chakra-text css-25kmip"
      >
        Don't have an account?
      </p>
      <a
        aria-label="sign up"
        class="chakra-button css-nl7ued"
        href="/register"
      >
        Sign Up
      </a>
    </div>
    <div
      class="css-178yklu"
    >
      <p
        class="chakra-text css-88a2rn"
      >
        @ 
        2024
         Bankco. All Rights Reserved.
      </p>
    </div>
  </form>
</div>
`;

exports[`AuthForm components match snapshot with register form 1`] = `
<div>
  <form
    class="css-f2htex"
    id="register-form"
  >
    <div
      class="chakra-stack css-ylms7g"
    >
      <div
        class="chakra-stack css-rluqv0"
      >
        <div
          class="chakra-form-control css-0"
          role="group"
        >
          <div
            class="chakra-input__group css-169ufh8"
            data-group="true"
          >
            <input
              aria-label="first-name"
              class="chakra-input css-10kn41x"
              id="field-:r6:"
              name="firstName"
              placeholder="First name"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chakra-form-control css-0"
          role="group"
        >
          <div
            class="chakra-input__group css-169ufh8"
            data-group="true"
          >
            <input
              aria-label="last-name"
              class="chakra-input css-10kn41x"
              id="field-:r7:"
              name="lastName"
              placeholder="Last name"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <input
            class="chakra-input css-10kn41x"
            id="field-:r8:"
            placeholder="Email"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <input
            class="chakra-input css-10kn41x"
            id="field-:r9:"
            name="password"
            placeholder="Password"
            type="password"
            value=""
          />
          <button
            aria-label="The eye icon"
            class="chakra-input__right-element css-1uzzgp1"
            data-testid="right-icon-input"
            type="button"
          >
            <svg
              class="chakra-icon css-1l546ul"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g
                fill="currentColor"
              >
                <path
                  d="M23.2,10.549a20.954,20.954,0,0,0-4.3-3.6l4-3.995a1,1,0,1,0-1.414-1.414l-.018.018a.737.737,0,0,1-.173.291l-19.5,19.5c-.008.007-.018.009-.026.017a1,1,0,0,0,1.631,1.088l4.146-4.146a11.26,11.26,0,0,0,4.31.939h.3c4.256,0,8.489-2.984,11.051-5.8A2.171,2.171,0,0,0,23.2,10.549ZM16.313,13.27a4.581,4.581,0,0,1-3,3.028,4.3,4.3,0,0,1-3.1-.19.253.253,0,0,1-.068-.407l5.56-5.559a.252.252,0,0,1,.407.067A4.3,4.3,0,0,1,16.313,13.27Z"
                />
                <path
                  d="M7.615,13.4a.244.244,0,0,0,.061-.24A4.315,4.315,0,0,1,7.5,12,4.5,4.5,0,0,1,12,7.5a4.276,4.276,0,0,1,1.16.173.244.244,0,0,0,.24-.062l1.941-1.942a.254.254,0,0,0-.1-.421A10.413,10.413,0,0,0,12,4.75C7.7,4.692,3.4,7.7.813,10.549a2.15,2.15,0,0,0-.007,2.9,21.209,21.209,0,0,0,3.438,3.03.256.256,0,0,0,.326-.029Z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
      <div
        class="chakra-form-control css-0"
        role="group"
      >
        <div
          class="chakra-input__group css-169ufh8"
          data-group="true"
        >
          <input
            class="chakra-input css-10kn41x"
            id="field-:ra:"
            name="confirmPassword"
            placeholder="Confirm password"
            type="password"
            value=""
          />
          <button
            aria-label="The eye icon"
            class="chakra-input__right-element css-1uzzgp1"
            data-testid="right-icon-input"
            type="button"
          >
            <svg
              class="chakra-icon css-1l546ul"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <g
                fill="currentColor"
              >
                <path
                  d="M23.2,10.549a20.954,20.954,0,0,0-4.3-3.6l4-3.995a1,1,0,1,0-1.414-1.414l-.018.018a.737.737,0,0,1-.173.291l-19.5,19.5c-.008.007-.018.009-.026.017a1,1,0,0,0,1.631,1.088l4.146-4.146a11.26,11.26,0,0,0,4.31.939h.3c4.256,0,8.489-2.984,11.051-5.8A2.171,2.171,0,0,0,23.2,10.549ZM16.313,13.27a4.581,4.581,0,0,1-3,3.028,4.3,4.3,0,0,1-3.1-.19.253.253,0,0,1-.068-.407l5.56-5.559a.252.252,0,0,1,.407.067A4.3,4.3,0,0,1,16.313,13.27Z"
                />
                <path
                  d="M7.615,13.4a.244.244,0,0,0,.061-.24A4.315,4.315,0,0,1,7.5,12,4.5,4.5,0,0,1,12,7.5a4.276,4.276,0,0,1,1.16.173.244.244,0,0,0,.24-.062l1.941-1.942a.254.254,0,0,0-.1-.421A10.413,10.413,0,0,0,12,4.75C7.7,4.692,3.4,7.7.813,10.549a2.15,2.15,0,0,0-.007,2.9,21.209,21.209,0,0,0,3.438,3.03.256.256,0,0,0,.326-.029Z"
                />
              </g>
            </svg>
          </button>
        </div>
      </div>
      <div
        class="css-blvggq"
      >
        <label
          class="chakra-checkbox css-1elxtiq"
        >
          <input
            aria-disabled="false"
            class="chakra-checkbox__input"
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); height: 1px; width: 1px; margin: -1px; padding: 0px; overflow: hidden; white-space: nowrap; position: absolute;"
            type="checkbox"
            value=""
          />
          <span
            aria-hidden="true"
            class="chakra-checkbox__control css-dnty2r"
          />
          <span
            class="chakra-checkbox__label css-1oeb2oe"
          >
            <p
              class="chakra-text css-1dl3xyd"
            >
              By creating an account, you're agreeing to our 
              <a
                class="chakra-link css-htaipz"
                href="#"
              >
                Privacy Policy
              </a>
              , and 
              <a
                class="chakra-link css-htaipz"
                href="#"
              >
                Electronics Communication Policy.
              </a>
            </p>
          </span>
        </label>
      </div>
    </div>
    <div
      class="css-omcqsq"
    >
      <p
        class="chakra-text css-dz8804"
      />
      <button
        aria-label="Sign Up"
        class="chakra-button css-4io6p0"
        disabled=""
        form="register-form"
        role="button"
        type="submit"
      >
        Sign Up
      </button>
    </div>
    <div
      class="css-1l4w6pd"
    >
      <p
        class="chakra-text css-25kmip"
      >
        Already have an account?
      </p>
      <a
        aria-label="sign in"
        class="chakra-button css-nl7ued"
        href="/login"
      >
        Sign In
      </a>
    </div>
    <div
      class="css-178yklu"
    >
      <p
        class="chakra-text css-88a2rn"
      >
        @ 
        2024
         Bankco. All Rights Reserved.
      </p>
    </div>
  </form>
</div>
`;
